# rocprofiler-register

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.azuredevops/: rocm-ci.yml
.github/workflows/: continuous-integration.yml  formatting.yml  sync-mainline.yaml  sync-staging.yaml
cmake/: rocprofiler_register_build_settings.cmake  rocprofiler_register_compilers.cmake  rocprofiler_register_config_install.cmake  rocprofiler_register_config_interfaces.cmake  rocprofiler_register_config_packaging.cmake  rocprofiler_register_formatting.cmake  rocprofiler_register_interfaces.cmake  rocprofiler_register_linting.cmake  rocprofiler_register_memcheck.cmake  rocprofiler_register_options.cmake  rocprofiler_register_utilities.cmake
cmake/Templates/: modulefile.in  rocprofiler-register-config.cmake.in  setup-env.sh.in
samples/: CMakeLists.txt
samples/library-implementation/: CMakeLists.txt  demo.cpp  demo.hpp
scripts/: address-sanitizer-suppr.txt  leak-sanitizer-suppr.txt  run-ci.py  thread-sanitizer-suppr.txt
source/: CMakeLists.txt
source/include/: CMakeLists.txt
source/include/rocprofiler-register/: CMakeLists.txt  rocprofiler-register.h  version.h.in
source/lib/rocprofiler-register/: CMakeLists.txt  rocprofiler_register.c  rocprofiler_register.cpp
source/lib/rocprofiler-register/details/: CMakeLists.txt  dl.cpp  dl.hpp  environment.hpp  filesystem.hpp  join.hpp  log.hpp  utility.cpp  utility.hpp
tests/: CMakeLists.txt  test-amdhip-ctor-mt.cpp  test-amdhip-ctor.cpp  test-amdhip-hsart-roctx.cpp  test-amdhip-roctx-mt.cpp  test-amdhip-roctx.cpp
tests/amdhip/: CMakeLists.txt  amdhip.cpp  amdhip.hpp
tests/common/: fwd.h  fwd.hpp
tests/generic-tool/: CMakeLists.txt  generic-tool.cpp
tests/hsa-runtime/: CMakeLists.txt  hsa-runtime.cpp  hsa-runtime.hpp
tests/rocprofiler/: CMakeLists.txt  rocprofiler.cpp
tests/roctx/: CMakeLists.txt  roctx.cpp  roctx.hpp
